cmake_minimum_required (VERSION 2.8)
project (REDIS_AUTH_ADMIN)
   
include_directories(${CMAKE_CURRENT_BINARY_DIR})
find_package(Hiredis REQUIRED)
if(LIBHIREDIS_FOUND)
    include_directories(${LIBHIREDIS_INCLUDE_DIR})
    add_definitions(${LIBHIREDIS_DEFINITIONS})
else()
    message(FATAL_ERROR "Hiredis not found")
endif(LIBHIREDIS_FOUND)

file(GLOB redis_auth_admin_sources . src/*.cc)
file(GLOB hlv_common_sources . ../common/src/*.cc)
add_executable(redis_auth_admin ${redis_auth_admin_sources})
target_link_libraries(redis_auth_admin ${Boost_LIBRARIES})
target_link_libraries(redis_auth_admin ${LIBHIREDIS_LIBRARIES})
if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    find_package (Threads)
    target_link_libraries(redis_auth_admin ${CMAKE_THREAD_LIBS_INIT})
endif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
