cmake_minimum_required (VERSION 2.8)
project (HLV_CLIENT)
if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    set(CMAKE_CXX_FLAGS "-stdlib=libc++")
endif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -std=c++11")
find_package(Boost 1.54 EXACT REQUIRED COMPONENTS log log_setup system program_options)
if (Boost_FOUND)
    message("boost found ${Boost_INCLUDE_DIRS} ${Boost_LIBRARIES}")
    include_directories(${Boost_INCLUDE_DIRS})
    add_definitions(-DBOOST_LOG_DYN_LINK)
else ()
    message(FATAL_ERROR "Boost 1.54 not found")
endif(Boost_FOUND)

find_package(Protobuf)
if(PROTOBUF_FOUND)
    include_directories(${PROTOBUF_INCLUDE_DIRS})
    include_directories(${CMAKE_BINARY_DIR})
    PROTOBUF_GENERATE_CPP(HLV_PROTO_SRC HLV_PROTO_HDRS ${HLV_CLIENT_SOURCE_DIR}/../proto/service.proto)
else()
    message(FATAL_ERROR "Protobuf not found")
endif(PROTOBUF_FOUND)
include_directories(${HLV_CLIENT_SOURCE_DIR}/../common/include)

message(${PROTOBUF_LIBRARIES})
file(GLOB hlv_client_sources . src/*.cc)
file(GLOB hlv_common_sources . ../common/src/*.cc)
add_executable(hlv_client ${HLV_PROTO_SRC} ${HLV_PROTO_HDRS} ${hlv_client_sources} ${hlv_common_sources})
target_link_libraries(hlv_client ${PROTOBUF_LIBRARIES})
target_link_libraries(hlv_client ${Boost_LIBRARIES})
if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    find_package (Threads)
    target_link_libraries(hlv_client ${CMAKE_THREAD_LIBS_INIT})
endif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")

