cmake_minimum_required (VERSION 2.8) 
project (EV_LOOKUP)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${EV_LOOKUP_SOURCE_DIR}/cmake_components")
if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    set(CMAKE_CXX_FLAGS "-stdlib=libc++")
endif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -std=c++11")
include_directories("${EV_LOOKUP_SOURCE_DIR}/include")
find_package(Boost 1.54 EXACT REQUIRED COMPONENTS log log_setup system program_options)
if (Boost_FOUND)
    message("boost found ${Boost_INCLUDE_DIRS} ${Boost_LIBRARIES}")
    include_directories(${Boost_INCLUDE_DIRS})
    add_definitions(-DBOOST_LOG_DYN_LINK)
else ()
    message(FATAL_ERROR "Boost 1.54 not found")
endif(Boost_FOUND)

find_package(Protobuf REQUIRED)
if(PROTOBUF_FOUND)
    include_directories(${PROTOBUF_INCLUDE_DIRS})
else()
    message(FATAL_ERROR "Protobuf not found")
endif(PROTOBUF_FOUND)
include_directories(${EV_LOOKUP_SOURCE_DIR}/../common/include)
add_subdirectory (asiohiredis)
add_subdirectory (server)
add_subdirectory (client_library)
add_subdirectory (client_async_library)
add_subdirectory (client_example)
add_subdirectory (coordinator)
add_subdirectory (update_library)
add_subdirectory (update_client_example)
add_subdirectory (ldiscovery_edge_box)
add_subdirectory (ldiscovery_client_lib)
add_subdirectory (dropbox_client)
