cmake_minimum_required (VERSION 2.8)
project (HLV_SERVICE)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -stdlib=libc++ -std=c++11")
find_package(Boost 1.54 EXACT REQUIRED COMPONENTS log log_setup system)
if (Boost_FOUND)
    message("boost found ${Boost_INCLUDE_DIRS} ${Boost_LIBRARIES}")
    include_directories(${Boost_INCLUDE_DIRS})
    add_definitions(-DBOOST_LOG_DYN_LINK)
else ()
    message(FATAL_ERROR "Boost 1.54 not found")
endif(Boost_FOUND)

find_package(Protobuf)
if(PROTOBUF_FOUND)
    include_directories(${PROTOBUF_INCLUDE_DIRS})
    include_directories(${CMAKE_BINARY_DIR})
    PROTOBUF_GENERATE_CPP(HLV_PROTO_SRC HLV_PROTO_HDRS ${HLV_SERVICE_SOURCE_DIR}/../proto/service.proto)
else()
    message(FATAL_ERROR "Protobuf not found")
endif(PROTOBUF_FOUND)

find_package(OpenSSL)
if(OPENSSL_FOUND)
    include_directories(${OPENSSL_INCLUDE_DIR})
else()
    message(FATAL_ERROR "OpenSSL not found")
endif(OPENSSL_FOUND)

include_directories(${HLV_SERVICE_SOURCE_DIR}/../common/include)

message(${PROTOBUF_LIBRARIES})
file(GLOB hlv_service_sources . src/*.cc)
file(GLOB hlv_common_sources . ../common/src/*.cc)
add_executable(hlv_service ${HLV_PROTO_SRC} ${HLV_PROTO_HDRS} ${hlv_service_sources} ${hlv_common_sources})
target_link_libraries(hlv_service ${PROTOBUF_LIBRARIES})
target_link_libraries(hlv_service ${Boost_LIBRARIES})
target_link_libraries(hlv_service ${OPENSSL_LIBRARIES})
