cmake_minimum_required (VERSION 2.8)
project (HLV_UPDATE_SERVER)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(${HIREDIS_ASIO_LIB_SOURCE_DIR}/include)
PROTOBUF_GENERATE_CPP(HLV_PROTO_LKP_SRC HLV_PROTO_LKP_HDRS ${EV_LOOKUP_SOURCE_DIR}/../proto/lookup.proto)
find_package(Hiredis REQUIRED)
if(LIBHIREDIS_FOUND)
    include_directories(${LIBHIREDIS_INCLUDE_DIR})
    add_definitions(${LIBHIREDIS_DEFINITIONS})
else()
    message(FATAL_ERROR "Hiredis not found")
endif(LIBHIREDIS_FOUND)

file(GLOB coordinator_sources . src/*.cc)
add_executable(coordinator  
    ${HLV_PROTO_LKP_SRC} ${HLV_PROTO_LKP_HDRS} ${coordinator_sources})
target_link_libraries(coordinator ${PROTOBUF_LIBRARIES})
target_link_libraries(coordinator ${Boost_LIBRARIES})
target_link_libraries(coordinator ${LIBHIREDIS_LIBRARIES})
target_link_libraries(coordinator hiredis_asio) 
if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    find_package (Threads)
    target_link_libraries(coordinator ${CMAKE_THREAD_LIBS_INIT})
endif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")

