cmake_minimum_required (VERSION 2.8)
project (DROPBOX_CLIENT)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-write-strings")
include_directories(${EV_LDISCOVERY_LIB_SOURCE_DIR}/include)
include_directories(${HLV_LOOKUP_CLIENT_LIB_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
file(GLOB dropbox_client_sources . src/*.cc)
file(GLOB dropbox_client_csources . src/*.c)
add_executable(dropbox_client_mk1 ${dropbox_client_sources} ${dropbox_client_csources})
target_link_libraries(dropbox_client_mk1 ${Boost_LIBRARIES})
target_link_libraries(dropbox_client_mk1 ldiscovery_lib) 
target_link_libraries(dropbox_client_mk1 lookup_client) 

