cmake_minimum_required (VERSION 2.8)
project (EV_DISCOVERY_EDGE)
include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(${HIREDIS_ASIO_LIB_SOURCE_DIR}/include)
PROTOBUF_GENERATE_CPP(HLV_PROTO_LKP_SRC HLV_PROTO_LKP_HDRS ${EV_LOOKUP_SOURCE_DIR}/../proto/ebox.proto)
find_package(Hiredis REQUIRED)
if(LIBHIREDIS_FOUND)
    include_directories(${LIBHIREDIS_INCLUDE_DIR})
    add_definitions(${LIBHIREDIS_DEFINITIONS})
else()
    message(FATAL_ERROR "Hiredis not found")
endif(LIBHIREDIS_FOUND)

file(GLOB ldiscovery_sources . src/*.cc)
add_executable(ldiscovery  
    ${HLV_PROTO_LKP_SRC} ${HLV_PROTO_LKP_HDRS} ${ldiscovery_sources})
target_link_libraries(ldiscovery ${PROTOBUF_LIBRARIES})
target_link_libraries(ldiscovery ${Boost_LIBRARIES})
target_link_libraries(ldiscovery ${LIBHIREDIS_LIBRARIES})
target_link_libraries(ldiscovery hiredis_asio) 
if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    find_package (Threads)
    target_link_libraries(ldiscovery ${CMAKE_THREAD_LIBS_INIT})
endif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")

